# trash-compactor

./: .gitignore  CMakeLists.txt  Makefile  Makefile-Chris  README.md  avl.c  avl.h  avl.h.gch  dragon  hashmap.c  hashmap.h  hashmap.h.gch  lex.yy.c  list.c  list.h  list.h.gch  main.c  pc.l  pc.tab.c  pc.tab.h  pc.y  queue.h.gch  simple_functions.h.gch  stack.h  stack.h.gch  table_stack.c  table_stack.h  tree.c  tree.h  tree.h.gch  vec.h  vec.h.gch  y.output  y.tab.c  y.tab.h
data_structures/: queue.h  simple_functions.h  vec.h
pascal/: boo.p  test.pal
src/: hashmap.c  main.c  stack.h  vec.c
